[gd_scene load_steps=3 format=3 uid="uid://pyrf76cgs0fg"]

[ext_resource type="Theme" uid="uid://d2cxgswnxv5r8" path="res://theme/menuTheme.tres" id="1_4rdm8"]
[ext_resource type="Script" path="res://menus/pauseMenu/pause_menu.gd" id="2_1m4ka"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(640, 360)
theme = ExtResource("1_4rdm8")
script = ExtResource("2_1m4ka")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.5
offset_top = -80.0
offset_right = 41.5
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Retry" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="MainMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
